<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="GVL" Id="{543590d2-21dc-426c-bb1c-cff8b9e02654}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	
(*
			============================GENERAL SHUTTER LAYOUT===============================
			  ________________________________________________________________________________
	        ||                                  HALL SWITCH                                   \
	X-side  ||       ----14---13--12---11---10---9---8---7---6---5---4---3---2--1---0----      \    X+ side
			||_________________________________________________________________________         \	
			| | 				 |                 **  **  **                 |        \ MotorXP \
			| |					 |            *                  *            |         \ MotorXM \   
			| |					 |         *                        *         |          \_________\
			| |				     |       *                            *       |                   | |
			| |					 |      *                              *      |                   | |
			| |		     	     |     *                                *     |                   | |
			| |		BLADE 	     |     *            APERTURE            *     |       BLADE       | |
			| |		STACK	     |     *                                *     |       STACK       | |
			| |		 XM 	     |     *                                *     |        XP         | |
			| |					 |      *                              *      |                   | |
			| |					 |       *                            *       |                   | |
			| |					 |         *                        *         |                   | |
			| |					 |   	      *                  *            |                   | |
			|_|__________________|_________________**  **  **_________________|___________________|_|
			
			       ---Negative-Direction--->                          <---Positive-Direction---
*)

	 
	 hallLower_C 	: INT := 0;
	 hallUpper_C 	: INT := 14;
	 dirPos_C		: INT := 0;
	 dirNeg_C		: INT := 1;
	 tripPerHall_C	: INT := 16;
	 numOfHall_C	: INT := 15;
	 tripCount_C	: INT := (tripPerHall_C*numOfHall_C)-1;
	
	
END_VAR
VAR_GLOBAL

	//Hall Switches
	hallSwitch AT %I*	:ARRAY[0..14] OF BOOL;
	hallSequence 		: WORD;

	//Timer
	fbWaitTimer	: TON;
	expoTime	: TIME := T#1s; //time specified in milliseconds
	
	//others
	setPosition : LREAL;
	
	//TestVariable
	testINT : INT;
	//testINT2 : INT;
	//testLREAL : LREAL;
	//testWord : WORD;
	
	fbWritePersistentData	: WritePersistentData;
END_VAR

VAR_GLOBAL PERSISTENT // For million cycle test
	strokeXP	: UDINT;
	strokeXM	: UDINT;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>